update index.html and style.css

--- a/style.css
+++ b/style.css
@@ -117,8 +117,8 @@ body {
 
 .hero {
   display: grid;
-  grid-template-columns: 1fr 1fr;
-  max-width: 130rem;
+  grid-template-columns: 1fr;
+  max-width: 70rem;
   margin: 0 auto;
   align-items: center;
   gap: 9.6rem 0;
