--- a/style.css
+++ b/style.css
@@ -111,7 +111,7 @@ body {
   height: 100%;
   object-fit: cover; /* O vídeo cobre todo o espaço disponível */
   filter: brightness(
-    0.4
+    0.35
   ); /* Ajuste o valor para controlar a intensidade do filtro */
 }
 
@@ -305,4 +305,74 @@ body {
   /* border: 3px solid #fff; */
   /* trick to add border inside */
   box-shadow: inset 0 0 0 3px #fff;
+}
+
+/* BOTAO 2*/
+.button {
+  --black: #000000;
+  --ch-black: #141414;
+  --eer-black: #1b1b1b;
+  --night-rider: #2e2e2e;
+  --white: #ff0000;
+  --af-white: #ff0000;
+  --ch-white: #ff0000;
+  display: inline-block;
+  font-size: 2rem;
+  font-weight: 600;
+  padding: 1.6rem 3.2rem;
+  border-radius: 9px;
+  text-decoration: none;
+  align-items: center;
+  justify-content: center;
+  /* gap: 10px; */
+  margin-right: 12px;
+  border: none;
+  color: white;
+  position: relative;
+  cursor: pointer;
+  transition-duration: 0.2s;
+  background-color: var(--ch-black);
+}
+
+.button:before,
+.button:after {
+  content: "";
+  position: absolute;
+  left: -2px;
+  top: -2px;
+  border-radius: 10px;
+  background: linear-gradient(
+    45deg,
+    var(--ch-black),
+    var(--eer-black),
+    var(--night-rider),
+    var(--ch-white),
+    var(--night-rider),
+    var(--eer-black),
+    var(--ch-black),
+    var(--ch-black)
+  );
+  background-size: 700%;
+  width: calc(100% + 4px);
+  height: calc(100% + 4px);
+  z-index: -1;
+  animation: steam 20s linear infinite;
+}
+
+@keyframes steam {
+  0% {
+    background-position: 0 0;
+  }
+
+  50% {
+    background-position: 400% 0;
+  }
+
+  100% {
+    background-position: 0 0;
+  }
+}
+
+.button:after {
+  filter: blur(50px);
 }
