--- a/style.css
+++ b/style.css
@@ -66,19 +66,19 @@ body {
 }
 .main-nav-link:hover,
 .main-nav-link:active {
-  color: #cf711f;
+  color: #ff3333;
 }
 
 .main-nav-link.nav-cta:link,
 .main-nav-link.nav-cta:visited {
-  background-color: #25d366;
+  background-color: #ff3333;
   padding: 1.2rem 2.4rem;
   border-radius: 9px;
   color: #fff;
 }
 .main-nav-link.nav-cta:hover,
 .main-nav-link.nav-cta:active {
-  background-color: #25b158;
+  background-color: #ff3333;
 }
 /* ************* */
 /* HERO SECTION */
@@ -157,7 +157,7 @@ body {
   font-weight: 600;
 }
 .delivered-text span {
-  color: #5d9aca;
+  color: #ff3333;
   font-weight: 700;
 }
 /* MOBILE */
@@ -204,7 +204,7 @@ body {
 }
 .link:hover,
 .link:active {
-  color: #cf711f;
+  color: #ff3333;
   border-bottom: 1px solid transparent;
 }
 .list {
@@ -301,7 +301,7 @@ body {
 }
 .btn--outline:hover,
 .btn--outline:active {
-  background-color: #fdf2e9;
+  background-color: #fdece9;
   /* border: 3px solid #fff; */
   /* trick to add border inside */
   box-shadow: inset 0 0 0 3px #fff;
