--- a/style.css
+++ b/style.css
@@ -17,7 +17,7 @@ body {
   line-height: 1;
   font-weight: 400;
   color: #ffffff;
-
+  background-color: #111;
   /* only works if there is nothing absolute positioned in relation to body */
   overflow-x: hidden;
 }
@@ -356,7 +356,7 @@ body {
   width: calc(100% + 4px);
   height: calc(100% + 4px);
   z-index: -1;
-  animation: steam 20s linear infinite;
+  animation: steam 15s linear infinite;
 }
 
 @keyframes steam {
@@ -378,3 +378,115 @@ body {
 }
 
 /* featured in */
+.section-featured {
+  padding: 4.8rem 0 3.2rem 0;
+}
+.heading-featured-in {
+  font-size: 1.4rem;
+  text-transform: uppercase;
+  letter-spacing: 0.75px;
+  font-weight: 500;
+  text-align: center;
+  margin-bottom: 2.4rem;
+  color: #888;
+}
+.logos {
+  display: flex;
+  justify-content: space-around;
+}
+.logos img {
+  height: 3.2rem;
+  filter: grayscale(100%) brightness(0) invert(1);
+}
+.container {
+  max-width: 120rem;
+  padding: 0 3.2rem;
+  margin: 0 auto;
+}
+
+/* HOW IT WORKS */
+.grid--center-v {
+  align-items: center;
+}
+.grid--2-cols {
+  grid-template-columns: repeat(2, 1fr);
+}
+.grid {
+  display: grid;
+  column-gap: 6.4rem;
+  row-gap: 9.6rem;
+  margin-bottom: 9.6rem;
+}
+.step-number {
+  font-size: 8.6rem;
+  font-weight: 600;
+  color: #ddd;
+  margin-bottom: 1.2rem;
+}
+.heading-tertiary {
+  font-size: 3rem;
+  line-height: 1.2;
+  margin-bottom: 3.2rem;
+}
+.step-img {
+  width: 35%;
+}
+.step-img-box {
+  position: relative;
+
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.step-img-box::before {
+  content: "";
+  display: block;
+  width: 60%;
+
+  /* height: 60%; */
+
+  /* 60% of parent's width */
+  border-radius: 50%;
+  padding-bottom: 60%;
+  background-color: #fdf2e9;
+
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  z-index: -1;
+}
+.step-img-box::after,
+.step-img-box::before {
+  content: "";
+  display: block;
+
+  /* 60% of parent's width */
+  border-radius: 50%;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+.step-img-box::before {
+  width: 60%;
+  padding-bottom: 60%;
+  background-color: #fdf2e9;
+  z-index: -2;
+}
+.step-img-box::after {
+  width: 45%;
+  padding-bottom: 45%;
+  background-color: #fae5d3;
+  z-index: -1;
+}
+.step-number {
+  font-size: 8.6rem;
+  font-weight: 600;
+  color: #ccc;
+  margin-bottom: 1.2rem;
+}
+.step-description {
+  font-size: 2rem;
+  line-height: 1.6;
+}
