--- a/style.css
+++ b/style.css
@@ -260,7 +260,7 @@ body {
   display: block;
   font-size: 1.6rem;
   font-weight: 500;
-  color: #5d9aca;
+  color: #ff3333;
   text-transform: uppercase;
   margin-bottom: 1.6rem;
   letter-spacing: 0.75px;
