--- a/style.css
+++ b/style.css
@@ -250,6 +250,14 @@ body {
   margin-bottom: 1.6rem;
   letter-spacing: 0.75px;
 }
+.heading {
+  font-size: 3rem;
+  line-height: 1.2;
+  margin-bottom: 3.2rem;
+  margin: 0 auto;
+  margin-bottom: 15.5rem;
+}
+
 .btn,
 .btn:link,
 .btn:visited {
@@ -388,7 +396,11 @@ body {
   padding: 0 3.2rem;
   margin: 0 auto;
 }
-
+.container2 {
+  max-width: 120rem;
+  padding: 0 3.2rem;
+  margin-bottom: 15.5rem;
+}
 /* HOW IT WORKS */
 .section-how {
   padding: 9.6rem 0;
@@ -678,5 +690,5 @@ svg {
   color: #555;
 }
 .grid:not(:last-child) {
-  margin-bottom: 15.6rem;
+  margin-bottom: 5.6rem;
 }
