--- a/style.css
+++ b/style.css
@@ -103,7 +103,7 @@ body {
   left: 0;
   width: 100vw;
   height: 100%;
-  z-index: -1; /* Coloca o vídeo atrás do conteúdo */
+  z-index: -999; /*Coloca o vídeo atrás do conteúdo */
 }
 
 .hero-video video {
@@ -214,7 +214,7 @@ body {
   outline: none;
   /* outline: 4px dotted; */
   /* outline-offset: 8px; */
-  box-shadow: 0 0 0 0.8rem rgba(230, 125, 34, 0.5);
+  box-shadow: 0 0 0 0.8rem rgba(255, 51, 51, 0.5);
 }
 
 .heading-primary,
@@ -330,7 +330,7 @@ body {
 .button:before,
 .button:after {
   content: "";
-  position: absolute;
+  position: relative;
   left: -2px;
   top: -2px;
   border-radius: 10px;
@@ -509,7 +509,7 @@ body {
 .icon-mobile-nav {
   height: 4.8rem;
   width: 4.8rem;
-  color: #333;
+  color: #ffffff;
 }
 .icon-mobile-nav[name="close-outline"] {
   display: none;
