--- a/style.css
+++ b/style.css
@@ -25,16 +25,19 @@ body {
 .logo {
   height: 5.2rem;
 }
+.nav-open {
+  z-index: 10;
+}
 .sticky .header {
   position: fixed;
   top: 0;
   bottom: 0;
   width: 100%;
-  height: 8rem;
+  height: 6rem;
   padding-top: 0;
   padding-bottom: 0;
   background-color: #111;
-  z-index: 999;
+  z-index: 1;
   box-shadow: 0 1.2rem 3.2rem rgba(0, 0, 0, 0.03);
 }
 .sticky .section-hero {
@@ -214,7 +217,7 @@ body {
   outline: none;
   /* outline: 4px dotted; */
   /* outline-offset: 8px; */
-  box-shadow: 0 0 0 0.8rem rgba(255, 51, 51, 0.5);
+  box-shadow: 0 0 0 0.8rem rgba(230, 125, 34, 0.5);
 }
 
 .heading-primary,
@@ -330,7 +333,7 @@ body {
 .button:before,
 .button:after {
   content: "";
-  position: relative;
+  position: absolute;
   left: -2px;
   top: -2px;
   border-radius: 10px;
