--- a/style.css
+++ b/style.css
@@ -579,12 +579,18 @@ svg {
   margin-bottom: 4.8rem;
 }
 .cta-img-box {
+  /* background-image: linear-gradient(
+      to right bottom,
+      rgba(255, 51, 51, 0.35),
+      rgba(153, 31, 31, 0.35)
+    ),
+    url("../assets/cta.jpg"); */
   background-image: linear-gradient(
       to right bottom,
       rgba(255, 51, 51, 0.35),
       rgba(153, 31, 31, 0.35)
     ),
-    url("../assets/cta.jpg");
+    url("assets/cta.jpg");
   background-size: cover;
   background-position: center;
 }
