--- a/style.css
+++ b/style.css
@@ -350,7 +350,8 @@ body {
 
 /* featured in */
 .section-featured {
-  padding: 4.8rem 0 3.2rem 0;
+  padding: 4.8rem 3.2rem 0;
+  margin-bottom: 20px;
 }
 .heading-featured-in {
   font-size: 1.4rem;
@@ -359,6 +360,7 @@ body {
   font-weight: 500;
   text-align: center;
   margin-bottom: 2.4rem;
+  margin-top: 2.4rem;
   color: #888;
 }
 .logos {
@@ -382,6 +384,9 @@ body {
 /* HOW IT WORKS */
 .section-how {
   padding: 9.6rem 0;
+  background-image: linear-gradient(to right bottom, #d628287c, #002f4974);
+  margin-top: 100px;
+  margin-bottom: 100px;
 }
 .grid--center-v {
   align-items: center;
@@ -605,6 +610,7 @@ svg {
   color: #fdf2e9;
   align-self: end;
   padding: 1.2rem;
+  text-align: center;
 }
 .btn--form:hover {
   background-color: #fdf2e9;
