--- a/style.css
+++ b/style.css
@@ -240,6 +240,9 @@ body {
   line-height: 1.2;
   margin-bottom: 9.6rem;
 }
+.hd {
+  text-align: center;
+}
 .heading-tertiary {
   font-size: 3rem;
   line-height: 1.2;
