--- a/style.css
+++ b/style.css
@@ -121,7 +121,7 @@ body {
 .hero {
   display: grid;
   grid-template-columns: 1fr;
-  max-width: 70rem;
+  max-width: 100rem;
   margin: 0 auto;
   align-items: center;
   text-align: center;
@@ -133,13 +133,14 @@ body {
   font-size: 2.5rem;
   line-height: 1.5;
   margin-bottom: 4.8rem;
+  font-weight: 500;
 }
 .hero-img {
   width: 100%;
 }
 .delivered-meals {
   display: flex;
-  margin-top: 8rem;
+  margin-top: 25rem;
   gap: 1.6rem;
   align-items: center;
 }
@@ -157,7 +158,7 @@ body {
   margin: 0;
 }
 .delivered-text {
-  font-size: 1.8rem;
+  font-size: 2.1rem;
   font-weight: 600;
 }
 .delivered-text span {
@@ -241,7 +242,7 @@ body {
   margin-bottom: 9.6rem;
 }
 .hd {
-  text-align: center;
+  margin-top: 70px;
 }
 .heading-tertiary {
   font-size: 3rem;
@@ -352,6 +353,11 @@ body {
 */
 
 /* featured in */
+
+.feature {
+  box-shadow: 0px 20px 30px 0px rgba(255, 250, 250, 0.679);
+  border-radius: 12px;
+}
 .section-featured {
   padding: 4.8rem 3.2rem 0;
   margin-bottom: 20px;
@@ -384,6 +390,9 @@ body {
   padding: 0 3.2rem;
   margin-bottom: 15.5rem;
 }
+.containerF {
+  margin-bottom: 50px;
+}
 /* HOW IT WORKS */
 .section-how {
   padding: 9.6rem 0;
@@ -399,6 +408,7 @@ body {
 }
 .grid--4-cols {
   grid-template-columns: repeat(3, 1fr);
+  margin-top: 80px;
 }
 .grid {
   display: grid;
